// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SolidJS Renderer Integration Tests > Basic Text Rendering > should render multiline text correctly 1`] = `
"Line 1         
Line 2         
Line 3         
               
               
"
`;

exports[`SolidJS Renderer Integration Tests > Basic Text Rendering > should render simple text correctly 1`] = `
"Hello World         
                    
                    
                    
                    
"
`;

exports[`SolidJS Renderer Integration Tests > Basic Text Rendering > should render text with dynamic content 1`] = `
"Counter: 42         
                    
                    
"
`;

exports[`SolidJS Renderer Integration Tests > Box Layout Rendering > should auto-enable border when borderColor is set 1`] = `
"┌──────────────────┐     
│Colored Border    │     
│                  │     
│                  │     
└──────────────────┘     
                         
                         
                         
"
`;

exports[`SolidJS Renderer Integration Tests > Box Layout Rendering > should auto-enable border when borderStyle is set 1`] = `
"┌──────────────────┐     
│With Border       │     
│                  │     
│                  │     
└──────────────────┘     
                         
                         
                         
"
`;

exports[`SolidJS Renderer Integration Tests > Box Layout Rendering > should auto-enable border when focusedBorderColor is set 1`] = `
"┌──────────────────┐     
│Focused Border    │     
│                  │     
│                  │     
└──────────────────┘     
                         
                         
                         
"
`;

exports[`SolidJS Renderer Integration Tests > Box Layout Rendering > should render absolute positioned boxes 1`] = `
"┌────────┐               
│Box 1   │               
└────────┘  ┌────────┐   
            │Box 2   │   
            └────────┘   
                         
                         
                         
"
`;

exports[`SolidJS Renderer Integration Tests > Box Layout Rendering > should render basic box layout correctly 1`] = `
"┌──────────────────┐     
│Inside Box        │     
│                  │     
│                  │     
└──────────────────┘     
                         
                         
                         
"
`;

exports[`SolidJS Renderer Integration Tests > Box Layout Rendering > should render nested boxes correctly 1`] = `
"┌─Parent Box─────────────────┐     
│                            │     
│                            │     
│  ┌────────┐                │     
│  │Nested  │                │     
│  └────────┘                │     
│               Sibling      │     
│                            │     
│                            │     
└────────────────────────────┘     
                                   
                                   
"
`;

exports[`SolidJS Renderer Integration Tests > Complex Layouts > should render complex nested layout correctly 1`] = `
"┌─Complex Layout───────────────────────┐     
│  ┌─────────────┐                     │     
│  │Header Sectio│                     │     
│  │Menu Item 1  │                     │     
│  │Menu Item 2  │                     │     
│  └─────────────┘                     │     
│                  ┌────────────────┐  │     
│                  │Content Area    │  │     
│                  │Some content her│  │     
│                  │More content    │  │     
│                  │Footer text     │  │     
│                  │                │  │     
│                  │                │  │     
│                  └────────────────┘  │     
│  Status: Ready                       │     
└──────────────────────────────────────┘     
                                             
                                             
"
`;

exports[`SolidJS Renderer Integration Tests > Complex Layouts > should render scrollbox with sticky scroll and spacer 1`] = `
"┌─scroll area────────────────┐
│                            │
│┌─hi───────────────────────┐│
││                          ││
││                          ││
││                          ││
││                          ││
││                          ││
││                          ││
││                          ││
││                          ││
│└──────────────────────────┘│
│                            │
│                            │
└────────────────────────────┘
┌─spacer─────────────────────┐
│spacer                      │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
"
`;

exports[`SolidJS Renderer Integration Tests > Complex Layouts > should render text with mixed styling and layout 1`] = `
"┌─────────────────────────────────┐     
│ERROR: Something went wrong      │     
│WARNING: Check your settings     │     
│SUCCESS: All systems operational │     
│                                 │     
│                                 │     
│                                 │     
└─────────────────────────────────┘     
                                        
                                        
"
`;

exports[`SolidJS Renderer Integration Tests > Empty and Edge Cases > should handle component with no children 1`] = `
"               
               
               
               
               
               
               
               
"
`;

exports[`SolidJS Renderer Integration Tests > Empty and Edge Cases > should handle empty component 1`] = `
"          
          
          
          
          
"
`;

exports[`SolidJS Renderer Integration Tests > Empty and Edge Cases > should handle very small dimensions 1`] = `
"Hi   
     
     
"
`;

exports[`SolidJS Renderer Integration Tests > Reactive Updates > should handle conditional rendering 1`] = `
"Always visible - Conditional t
                              
                              
"
`;

exports[`SolidJS Renderer Integration Tests > Reactive Updates > should handle conditional rendering 2`] = `
"Always visible                
                              
                              
"
`;

exports[`SolidJS Renderer Integration Tests > Reactive Updates > should handle reactive state changes 1`] = `
"Counter: 0     
               
               
"
`;

exports[`SolidJS Renderer Integration Tests > Reactive Updates > should handle reactive state changes 2`] = `
"Counter: 5     
               
               
"
`;
